--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cached_network_image: ^3.3.1
   image_picker: ^1.0.7
   firebase_storage: ^11.6.0
+  emoji_picker_flutter: ^2.1.1
 
 dev_dependencies:
   flutter_test:
